--- a/src/assets/css/widget-hook.css
+++ b/src/assets/css/widget-hook.css
@@ -2,18 +2,18 @@
 
 .dg-hook-container {width:100%;max-width:100%;position:relative;overflow:hidden;}
 
-.dg-hook {display:flex;justify-content:center;position:relative;width:100%;height:43px;margin-bottom:20px;margin-top:30px;}
+.dg-hook-container .dg-hook-alignment {display:flex;justify-content:center;position:relative;width:100%;height:43px;margin-bottom:20px;margin-top:30px;}
 
-.dg-hook .dg-hook-move {position:absolute;}
+.dg-hook-container .dg-hook-move {position:absolute;transition:left 0.1s;}
 
-.dg-hook .dg-hook-move:before,
-.dg-hook .dg-hook-move:after {content:'';position:absolute;top:50%;width:100vw;border-bottom:1px solid rgba(255,255,255,0.35);}
+.dg-hook-container .dg-hook-move:before,
+.dg-hook-container .dg-hook-move:after {content:'';position:absolute;top:50%;width:100vw;border-bottom:1px solid rgba(255,255,255,0.35);}
 
-.dg-hook .dg-hook-move:before {right:100%;margin-right:10px;}
-.dg-hook .dg-hook-move:after {left:100%;margin-left:10px;}
+.dg-hook-container .dg-hook-move:before {right:100%;margin-right:10px;}
+.dg-hook-container .dg-hook-move:after {left:100%;margin-left:10px;}
 
-.dg-hook .dg-hook-move .dg-hook-grab {display:flex;flex-direction:column;justify-content:center;position:relative;overflow:hidden;cursor:pointer;}
-.dg-hook .dg-hook-move .dg-hook-grab,
-.dg-hook .dg-hook-move .dg-hook-grab img,
-.dg-hook .dg-hook-move img {align-items:center;}
-.dg-hook .dg-hook-move .dg-hook-grab:before {content:'';position:absolute;width:100%;height:100%;left:0;z-index:1;}
+.dg-hook-container .dg-hook-move .dg-hook-grab {display:flex;flex-direction:column;justify-content:center;position:relative;overflow:hidden;cursor:pointer;}
+.dg-hook-container .dg-hook-move .dg-hook-grab,
+.dg-hook-container .dg-hook-move .dg-hook-grab img,
+.dg-hook-container .dg-hook-move img {align-items:center;}
+.dg-hook-container .dg-hook-move .dg-hook-grab:before {content:'';position:absolute;width:100%;height:100%;left:0;z-index:1;}
